# CPP-CMake-template

./: CMakeLists.txt  README.md
include/template/: methods.h  sub_methods.h
src/: hello.cpp
src/template/: methods.cpp  sub_methods.cpp
test/: main.cpp
test/template/: methods_test.cpp  sub_methods_test.cpp
